<resources>
    <string name="app_name">EverySale</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="registrati">Registrati</string>
    <string name="login">Accedi</string>

    <!--menu laterale-->
    <string name="menu_home">Home</string>
    <string name="menu_my_account">Il mio account</string>
    <string name="menu_my_insertions">Le mie inserzioni</string>
    <string name="menu_new_insertion">Nuova inserzione</string>
    <string name="menu_disconnect">Disconnettiti</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Stringhe fragment di login -->
    <string name="flogin_item1">Username/email</string>
    <string name="flogin_item2">Password</string>
    <string name="flogin_button">Accedi</string>

    <!-- Stringhe fragment di registrazione -->
    <string name="fregister1_item1">Email</string>
    <string name="fregister1_item2">Username</string>
    <string name="fregister1_item3">Password</string>
    <string name="fregister1_item4">Conferma Password</string>

    <string name="fregister2_item1">Nome</string>
    <string name="fregister2_item2">Cognome</string>
    <string name="fregister2_item3">Regione</string>
    <string name="fregister2_item4">Città</string>
    <string name="fregister2_item5">Cellulare</string>

    <string-array name="fregister2_regions_spinner">
        <item>Abruzzo</item>
        <item>Basilicata</item>
        <item>Calabria</item>
        <item>Campania</item>
        <item>Emilia Romagna</item>
        <item>Friuli Venezia Giulia</item>
        <item>Lazio</item>
        <item>Liguria</item>
        <item>Lombardia</item>
        <item>Marche</item>
        <item>Molise</item>
        <item>Piemonte</item>
        <item>Puglia</item>
        <item>Sardegna</item>
        <item>Sicilia</item>
        <item>Toscana</item>
        <item>Trentino-Alto Adige</item>
        <item>Umbria</item>
        <item>Valle d\'Aosta</item>
        <item>Veneto</item>
    </string-array>

    <string-array name="fregister2_region0_spinner">
        <item>Chieti</item>
        <item>L\'Aquila</item>
        <item>Pescara</item>
        <item>Teramo</item>
    </string-array>

    <string-array name="fregister2_region1_spinner">
        <item>Matera</item>
        <item>Potenza</item>
    </string-array>
    <string-array name="fregister2_region2_spinner">
        <item>Catanzaro</item>
        <item>Cosenza</item>
        <item>Crotone</item>
        <item>Reggio di Calabria</item>
        <item>Vibo Valentia</item>
    </string-array>

    <string-array name="fregister2_region3_spinner">
        <item>Avellino</item>
        <item>Benevento</item>
        <item>Caserta</item>
        <item>Napoli</item>
        <item>Salerno</item>
    </string-array>

    <string-array name="fregister2_region4_spinner">
        <item>Bologna</item>
        <item>Ferrara</item>
        <item>Forlì-Cesena</item>
        <item>Modena</item>
        <item>Parma</item>
        <item>Piacenza</item>
        <item>Ravenna</item>
        <item>Reggio nell\'Emilia</item>
        <item>Rimini</item>
    </string-array>

    <string-array name="fregister2_region5_spinner">
        <item>Gorizia</item>
        <item>Pordenone</item>
        <item>Trieste</item>
        <item>Udine</item>
    </string-array>

    <string-array name="fregister2_region6_spinner">
        <item>Frosinone</item>
        <item>Latina</item>
        <item>Rieti</item>
        <item>Roma</item>
        <item>Viterbo</item>
    </string-array>

    <string-array name="fregister2_region7_spinner">
        <item>Genova</item>
        <item>Imperia</item>
        <item>La Spezia</item>
        <item>Savona</item>
    </string-array>

    <string-array name="fregister2_region8_spinner">
        <item>Bergamo</item>
        <item>Brescia</item>
        <item>Como</item>
        <item>Cremona</item>
        <item>Lecco</item>
        <item>Lodi</item>
        <item>Mantova</item>
        <item>Milano</item>
        <item>Monza e della Brianza</item>
        <item>Pavia</item>
        <item>Sondrio</item>
        <item>Varese</item>
    </string-array>

    <string-array name="fregister2_region9_spinner">
        <item>Ancona</item>
        <item>Ascoli Piceno</item>
        <item>Fermo</item>
        <item>Macerata</item>
        <item>Pesaro e Urbino</item>
    </string-array>

    <string-array name="fregister2_region10_spinner">
        <item>Campobasso</item>
        <item>Isernia</item>
    </string-array>

    <string-array name="fregister2_region11_spinner">
        <item>Alessandria</item>
        <item>Asti</item>
        <item>Biella</item>
        <item>Cuneo</item>
        <item>Novara</item>
        <item>Torino</item>
        <item>Verbano-Cusio-Ossola</item>
        <item>Vercelli</item>
    </string-array>

    <string-array name="fregister2_region12_spinner">
        <item>Bari</item>
        <item>Barletta-Andria-Trani</item>
        <item>Brindisi</item>
        <item>Foggia</item>
        <item>Lecce</item>
        <item>Taranto</item>
    </string-array>

    <string-array name="fregister2_region13_spinner">
        <item>Cagliari</item>
        <item>Carbonia-Iglesias</item>
        <item>Medio Campidano</item>
        <item>Nuoro</item>
        <item>Ogliastra</item>
        <item>Olbia-Tempio</item>
        <item>Oristano</item>
        <item>Sassari</item>
    </string-array>

    <string-array name="fregister2_region14_spinner">
        <item>Agrigento</item>
        <item>Caltanissetta</item>
        <item>Catania</item>
        <item>Enna</item>
        <item>Messina</item>
        <item>Palermo</item>
        <item>Ragusa</item>
        <item>Siracusa</item>
        <item>Trapani</item>
    </string-array>

    <string-array name="fregister2_region15_spinner">
        <item>Arezzo</item>
        <item>Firenze</item>
        <item>Grosseto</item>
        <item>Livorno</item>
        <item>Lucca</item>
        <item>Massa-Carrara</item>
        <item>Pisa</item>
        <item>Pistoia</item>
        <item>Prato</item>
        <item>Siena</item>
    </string-array>

    <string-array name="fregister2_region16_spinner">
        <item>Bolzano</item>
        <item>Trento</item>
    </string-array>

    <string-array name="fregister2_region17_spinner">
        <item>Perugia</item>
        <item>Terni</item>
    </string-array>

    <string-array name="fregister2_region18_spinner">
        <item>Valle d\'Aosta</item>
    </string-array>

    <string-array name="fregister2_region19_spinner">
        <item>Belluno</item>
        <item>Padova</item>
        <item>Rovigo</item>
        <item>Treviso</item>
        <item>Venezia</item>
        <item>Verona</item>
        <item>Vicenza</item>
    </string-array>

    <string name="fregister3_imgButton">Carica immagine</string>
    <string name="fregister3_registerSubmitButton">Registrati!</string>
    <string name="fregister3_dataAllowCheckBox">Vuoi che i tuoi dati siano visibili?</string>

    <string name="fregister_backButton">&lt;</string>
    <string name="fregister_forwardButton">&gt;</string>

    <!-- stringhe three tabs layout e sottocomponenti-->

    <string name="body1">one</string>
    <string name="body2">two</string>
    <string name="body3">three</string>
    <string name="label1">Vicini</string>
    <string name="label2">Offerte Recenti</string>
    <string name="label3">Preferiti</string>

    <!-- stringhe listview item -->
    <string name="item_image">Immagine</string>
    <string name="item_title">Titolo</string>
    <string name="item_price">Prezzo</string>
    <string name="item_city">Città</string>
    <string name="item_rating">Rating</string>

    <!-- stringhe aggiuntive per l'inserzione generica -->
    <string name="item_address">Indirizzo</string>
    <string name="item_shop">Negozio</string>
    <string name="item_insertionist">Inserzionista</string>
    <string name="item_date1">Data inserimento</string>
    <string name="item_date2">Data scadenza</string>
    <string name="item_description">Descrizione</string>
    <string name="item_feedback">Feedback</string>

    <string name="start_activity">Login in corso</string>
    <string name="menu_search">Search</string>

    <string name="favorite_menu">add to favorite</string>
    <string name="defavorite_menu">remove from favorite</string>

    <!-- Stringhe layout modifica profilo -->
    <string name="profile_layout_cancelButton">Annulla</string>
    <string name="profile_layout_submitButton">Aggiorna</string>

    <!-- Stringhe layout crea inserzione  -->
    <string name="new_insertion_page_name">Nuova inserzione</string>
    <string name="new_insertion_title">Titolo</string>
    <string name="new_insertion_price">Prezzo</string>
    <string name="new_insertion_shop">Negozio</string>
    <string name="new_insertion_city">Città</string>
    <string name="new_insertion_address">Indirizzo</string>
    <string name="new_insertion_expiration_date">Data scadenza</string>
    <string name="new_insertion_description">Descrizione</string>
    <string name="new_insertion_submit_button">Crea</string>

    <string name="feedback">Lascia un commento di feedback ed una valutazione da 1 a 5</string>
    <string name="feedback_rating">3</string>
    <string name="feedback_button">Invia</string>
    <string name="title_activity_new_insertion">newInsertionActivity</string>
    <string name="title_activity_my_insertion">MyInsertion</string>
    <string name="title_activity_mmy_insertion">mmyInsertionActivity</string>
    <string name="title_activity_new_insertion_activityy">NewInsertionActivityy</string>

</resources>
