<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_my_insertions"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_insertions" />
        <item
            android:id="@+id/nav_new_insertion"
            android:title="@string/menu_new_insertion" />
        <item
            android:id="@+id/nav_disconnect"
            android:title="@string/menu_disconnect" />
    </group>

    <item
        android:id="@+id/menu_refresh"
        android:title="Refresh">
    </item>

</menu>
