<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_page_name"
            android:id="@+id/pageTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_title"
            android:id="@+id/titleTextView"
            android:layout_below="@+id/pageTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/titleEditText"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_price"
            android:id="@+id/priceTextView"
            android:layout_below="@+id/titleEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/priceEditText"
            android:layout_below="@+id/priceTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_shop"
            android:id="@+id/shopTextView"
            android:layout_below="@+id/priceEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/shopEditText"
            android:layout_below="@+id/shopTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_city"
            android:id="@+id/cityTextView"
            android:layout_below="@+id/shopEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/cityEditText"
            android:layout_below="@+id/cityTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_address"
            android:id="@+id/addressTextView"
            android:layout_below="@+id/cityEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressEditText"
            android:ems="10"
            android:layout_below="@+id/addressTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"
            android:inputType="textPersonName" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_expiration_date"
            android:id="@+id/expirationDateCheckBox"
            android:layout_below="@+id/addressEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <!-- se il checkBox è vero settare:
            android:layout_height="Wrap_content"
            android:visibility="visible"            -->
        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/expirationDateCalendarView"
            android:ems="10"
            android:layout_below="@+id/expirationDateCheckBox"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_description"
            android:id="@+id/descriptionTextView"
            android:layout_below="@+id/expirationDateCalendarView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionEditText"
            android:layout_below="@+id/descriptionTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/itemImageView"
            android:layout_below="@+id/descriptionEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:background="#7d2e2e" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fregister3_imgButton"
            android:id="@+id/imageButton"
            android:layout_below="@+id/itemImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/Button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_layout_cancelButton"
            android:id="@+id/cancelButton"
            android:layout_below="@+id/imageButton"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/Button"  />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_insertion_submit_button"
            android:id="@+id/submitButton"
            android:layout_below="@+id/imageButton"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/Button" />


    </RelativeLayout>

</ScrollView>