<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    </ImageView>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        android:textSize="25sp"
        android:layout_alignTop="@+id/item_icon"
        android:layout_toRightOf="@+id/item_icon"
        android:layout_toEndOf="@+id/item_icon"
        android:singleLine="true"
        android:ellipsize="end">
    </TextView>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:textSize="20sp"
        android:ems="5"
        android:paddingRight="5dp"
        android:layout_below="@+id/item_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:ellipsize="end"
        android:textAlignment="textEnd"
        android:gravity="end">
    </TextView>

    <TextView
        android:id="@+id/item_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_city"
        android:textSize="20sp"
        android:ems="8"
        android:layout_toRightOf="@+id/item_icon"
        android:layout_toEndOf="@+id/item_icon"
        android:layout_below="@+id/item_title"
        android:singleLine="true"
        android:ellipsize="end">
    </TextView>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_ratingBar"
        android:numStars="5"
        android:stepSize="0.1"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_alignBottom="@+id/item_icon"
        android:layout_toRightOf="@+id/item_icon"
        android:layout_toEndOf="@+id/item_icon"
        android:clickable="false" />

</RelativeLayout>